--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,11 @@
         "variant": "cpp",
         "iomanip": "cpp",
         "templateheader": "cpp",
-        "fstream": "cpp"
-    }
+        "fstream": "cpp",
+        "types.h": "c",
+        "signal.h": "c",
+        "unistd.h": "c",
+        "ctype.h": "c"
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/gcc"
 }
